@@ -147,11 +147,13 @@ def get_distro():
     return None
 
 def escape(string):
+    string = string.replace('&', '&amp;')
     if type(string) is not unicode:
-        string = unicode(string, _encoding)
-    return string.replace('&','&amp;').replace('<','&lt;').replace(
+        string = unicode(string, _encoding, 'xmlcharrefreplace')
+    string = string.replace('<','&lt;').replace(
             '>','&gt;').replace('\n','<br/>').replace(
             '\t','&nbsp;&nbsp;&nbsp;&nbsp;')
+    return string
 
 class TinderboxBuildScript(buildscript.BuildScript):
     help_url = 'http://live.gnome.org/JhbuildIssues/'
