@@ -1,3 +1,8 @@
+2008-11-14  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/frontends/tinderbox.py: be more robust against improper
+	unicode in program outputs.  (closes: #560579)
+
 2008-11-14  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/gnome-2.24.modules:
